--- a/index.html
+++ b/index.html
@@ -3,39 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HBURN_ULTIMATE_v27.3</title>
+    <title>HBURN_COMPACT_v27.4</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/6.7.0/ethers.umd.min.js"></script>
     <style>
-        :root { --p: #00ff88; --s: #ff3366; --bg: #030406; --glass: rgba(12, 14, 18, 0.98); --net: #008cff; --warn: #ffaa00; --xcm: #e6007a; }
+        :root { --p: #00ff88; --s: #ff3366; --bg: #050505; --glass: rgba(10, 10, 10, 0.95); --xcm: #e6007a; }
         * { box-sizing: border-box; }
-        body, html { margin: 0; padding: 0; min-height: 100vh; width: 100%; background: var(--bg); color: #fff; font-family: 'Consolas', monospace; overflow: hidden; display: flex; justify-content: center; align-items: center; }
+        body, html { margin: 0; padding: 0; height: 100vh; background: var(--bg); color: #fff; font-family: 'Consolas', 'Courier New', monospace; overflow: hidden; display: flex; justify-content: center; align-items: center; }
 
-        #canvas { position: fixed; top: 0; left: 0; z-index: 1; opacity: 0.2; pointer-events: none; }
-        #console::-webkit-scrollbar { width: 4px; }
-        #console::-webkit-scrollbar-thumb { background: var(--p); border-radius: 10px; }
+        /* SCROLLBAR COMPATTA */
+        #console::-webkit-scrollbar { width: 3px; }
+        #console::-webkit-scrollbar-thumb { background: var(--p); border-radius: 5px; }
 
-        #authOverlay { position: fixed; inset: 0; background: rgba(0,0,0,0.98); z-index: 100; display: flex; justify-content: center; align-items: center; backdrop-filter: blur(15px); }
-        .auth-box { width: 90%; max-width: 400px; padding: 40px; border: 1px solid var(--p); border-radius: 20px; text-align: center; }
-        .auth-input { background: #000; border: 1px solid #222; color: var(--p); width: 100%; padding: 15px; margin: 20px 0; border-radius: 8px; text-align: center; }
+        #canvas { position: fixed; top: 0; left: 0; z-index: 1; opacity: 0.25; }
 
-        .container { position: relative; z-index: 10; width: 98%; max-width: 1300px; height: 94vh; background: var(--glass); border: 1px solid rgba(255,255,255,0.05); border-radius: 24px; display: grid; grid-template-columns: 380px 1fr; overflow: hidden; box-shadow: 0 0 100px #000; }
-        .side { padding: 25px; border-right: 1px solid #1a1d23; display: flex; flex-direction: column; overflow-y: auto; background: rgba(0,0,0,0.4); }
-        .main-view { display: flex; flex-direction: column; overflow: hidden; }
+        #authOverlay { position: fixed; inset: 0; background: rgba(0,0,0,0.98); z-index: 100; display: flex; justify-content: center; align-items: center; }
+        .auth-box { width: 320px; padding: 30px; border: 1px solid var(--p); border-radius: 10px; text-align: center; }
+        .auth-input { background: #000; border: 1px solid #333; color: var(--p); width: 100%; padding: 12px; margin: 15px 0; border-radius: 5px; text-align: center; font-family: monospace; }
 
-        .stat-card { background: rgba(255,255,255,0.03); padding: 12px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.05); margin-bottom: 10px; }
-        .stat-label { font-size: 9px; color: var(--p); letter-spacing: 1px; text-transform: uppercase; font-weight: bold; margin-bottom: 4px; }
-        .val-big { font-size: 22px; font-weight: bold; color: var(--p); font-family: 'monospace'; }
-        .val-mid { font-size: 16px; color: #fff; }
+        /* PANNELLO RIDOTTO */
+        .container { position: relative; z-index: 10; width: 900px; height: 550px; background: var(--glass); border: 1px solid #1a1a1a; border-radius: 15px; display: grid; grid-template-columns: 280px 1fr; overflow: hidden; box-shadow: 0 0 50px #000; }
+        .side { padding: 20px; border-right: 1px solid #1a1a1a; display: flex; flex-direction: column; justify-content: space-between; background: rgba(0,0,0,0.3); }
 
-        .monitor-box { margin-bottom: 12px; padding: 10px; border-radius: 8px; background: rgba(0,0,0,0.3); border-left: 3px solid #222; }
-        .m-info { display: flex; justify-content: space-between; font-size: 9px; margin-bottom: 6px; font-weight: bold; }
-        .m-bar { width: 100%; height: 4px; background: #111; border-radius: 2px; overflow: hidden; }
+        .stat-card { background: rgba(255,255,255,0.02); padding: 10px; border-radius: 8px; margin-bottom: 8px; border: 1px solid rgba(255,255,255,0.05); }
+        .stat-label { font-size: 8px; color: var(--p); letter-spacing: 1px; text-transform: uppercase; font-weight: bold; }
+        .val-big { font-size: 18px; font-weight: bold; color: var(--p); }
+        .val-small { font-size: 13px; color: #aaa; }
+
+        .m-box { margin-bottom: 10px; }
+        .m-bar { width: 100%; height: 3px; background: #111; border-radius: 2px; overflow: hidden; margin-top: 4px; }
         .m-fill { height: 100%; width: 0%; transition: width 0.1s linear; }
 
-        .header-info { padding: 15px 30px; background: rgba(0,0,0,0.3); border-bottom: 1px solid #1a1d23; display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; font-size: 10px; }
-        #console { flex-grow: 1; padding: 25px; overflow-y: auto; font-size: 11px; color: #666; background: rgba(0,0,0,0.05); line-height: 1.6; }
+        .header { padding: 12px 20px; background: rgba(0,0,0,0.5); border-bottom: 1px solid #1a1a1a; display: flex; justify-content: space-between; font-size: 10px; color: #888; }
+        #console { flex-grow: 1; padding: 20px; overflow-y: auto; font-size: 11px; color: #555; line-height: 1.5; }
 
-        button { background: var(--p); color: #000; border: none; padding: 18px; border-radius: 12px; font-weight: 900; cursor: pointer; text-transform: uppercase; width: 100%; margin-top: 10px; }
+        button { background: var(--p); color: #000; border: none; padding: 14px; border-radius: 8px; font-weight: bold; cursor: pointer; text-transform: uppercase; width: 100%; font-size: 11px; }
+        button:disabled { background: #222; color: #444; }
     </style>
 </head>
 <body>
@@ -44,76 +46,76 @@
 
 <div id="authOverlay">
     <div class="auth-box">
-        <div class="stat-label">HBURN ULTIMATE v27.3</div>
-        <input type="password" id="inputKey" class="auth-input" placeholder="PRIVATE_KEY_0x">
-        <button onclick="unlock()">INITIALIZE ALL SYSTEMS</button>
+        <div class="stat-label">HBURN SYSTEM AUTH</div>
+        <input type="password" id="inputKey" class="auth-input" placeholder="0xPRIVATE_KEY">
+        <button onclick="unlock()">INITIALIZE</button>
     </div>
 </div>
 
 <div class="container">
     <div class="side">
-        <div class="stat-card">
-            <div class="stat-label">Total Global Supply</div>
-            <div id="totalSupply" class="val-big">0.00</div>
-        </div>
-        <div class="stat-card">
-            <div class="stat-label">Contract Balance (Pool)</div>
-            <div id="bal" class="val-mid">0.00</div>
-        </div>
+        <div>
+            <div class="stat-card">
+                <div class="stat-label">Total Supply</div>
+                <div id="totalSupply" class="val-big">0.00</div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-label">Pool Balance</div>
+                <div id="bal" class="val-small">0.00</div>
+            </div>
 
-        <div class="monitor-box" style="border-color: var(--p)">
-            <div class="m-info"><span style="color:var(--p)">MINT CYCLE</span><span id="mSec">0.0s</span></div>
-            <div class="m-bar"><div id="mFill" class="m-fill" style="background:var(--p)"></div></div>
-        </div>
-        <div class="monitor-box" style="border-color: var(--s)">
-            <div class="m-info"><span style="color:var(--s)">BURN CYCLE</span><span id="bSec">0.0s</span></div>
-            <div class="m-bar"><div id="bFill" class="m-fill" style="background:var(--s)"></div></div>
-        </div>
-        <div class="monitor-box" style="border-color: var(--net)">
-            <div class="m-info"><span style="color:var(--net)">JUNK STRESS</span><span id="jSec">0.0s</span></div>
-            <div class="m-bar"><div id="jFill" class="m-fill" style="background:var(--net)"></div></div>
-        </div>
-        <div class="monitor-box" style="border-color: var(--xcm)">
-            <div class="m-info"><span style="color:var(--xcm)">XCM ROUTING</span><span id="xSec">0.0s</span></div>
-            <div class="m-bar"><div id="xFill" class="m-fill" style="background:var(--xcm)"></div></div>
-        </div>
+            <div class="m-box">
+                <div style="display:flex; justify-content:space-between; font-size:8px"><span>MINT</span><span id="mSec">0s</span></div>
+                <div class="m-bar"><div id="mFill" class="m-fill" style="background:var(--p)"></div></div>
+            </div>
+            <div class="m-box">
+                <div style="display:flex; justify-content:space-between; font-size:8px"><span>BURN</span><span id="bSec">0s</span></div>
+                <div class="m-bar"><div id="bFill" class="m-fill" style="background:var(--s)"></div></div>
+            </div>
+            <div class="m-box">
+                <div style="display:flex; justify-content:space-between; font-size:8px"><span>JUNK</span><span id="jSec">0s</span></div>
+                <div class="m-bar"><div id="jFill" class="m-fill" style="background:var(--net)"></div></div>
+            </div>
+            <div class="m-box">
+                <div style="display:flex; justify-content:space-between; font-size:8px"><span>XCM</span><span id="xSec">0s</span></div>
+                <div class="m-bar"><div id="xFill" class="m-fill" style="background:var(--xcm)"></div></div>
+            </div>
 
-        <div style="display:grid; grid-template-columns: 1fr 1fr; gap:8px;">
-            <div class="stat-card"><div class="stat-label">Mints</div><div id="mCount" class="val-mid">0</div></div>
-            <div class="stat-card"><div class="stat-label" style="color:var(--s)">Burns</div><div id="bCount" class="val-mid">0</div></div>
-            <div class="stat-card"><div class="stat-label" style="color:var(--net)">Junk</div><div id="jCount" class="val-mid">0</div></div>
-            <div class="stat-card"><div class="stat-label" style="color:var(--xcm)">XCM</div><div id="xCount" class="val-mid">0</div></div>
+            <div style="display:grid; grid-template-columns: 1fr 1fr; gap:5px; margin-top:10px">
+                <div class="stat-card"><div class="stat-label">Mints</div><div id="mCount" class="val-small">0</div></div>
+                <div class="stat-card"><div class="stat-label" style="color:var(--s)">Burns</div><div id="bCount" class="val-small">0</div></div>
+            </div>
         </div>
-        <button id="start" disabled>WAITING AUTH...</button>
+        <button id="start" disabled>AWAITING KEY</button>
     </div>
 
-    <div class="main-view">
-        <div class="header-info">
-            <div>NONCE: <span id="curNonce" style="color:var(--warn)">...</span></div>
-            <div>BLOCK: <span id="blockNum" style="color:#fff">#...</span></div>
-            <div>FUEL: <span id="pasBalance" style="color:var(--p)">0.00 PAS</span></div>
-            <div>XCM: <span style="color:var(--xcm)">ENABLED</span></div>
+    <div style="display:flex; flex-direction:column; overflow:hidden">
+        <div class="header">
+            <span>PAS_FUEL: <span id="pasBalance" style="color:var(--p)">0.000</span></span>
+            <span>NONCE: <span id="curNonce" style="color:var(--xcm)">...</span></span>
+            <span>BLOCK: <span id="blockNum" style="color:#fff">#...</span></span>
         </div>
         <div id="console"></div>
     </div>
 </div>
 
 <script>
+    // MATRIX BG
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
     let w, h, drops;
-    function initCanvas() { w=canvas.width=window.innerWidth; h=canvas.height=window.innerHeight; drops=Array(Math.floor(w/30)).fill(1); }
-    initCanvas(); window.onresize = initCanvas;
+    function initC() { w=canvas.width=window.innerWidth; h=canvas.height=window.innerHeight; drops=Array(Math.floor(w/25)).fill(1); }
+    initC(); window.onresize = initC;
     function draw() {
-        ctx.fillStyle = "rgba(3, 4, 6, 0.15)"; ctx.fillRect(0, 0, w, h);
-        ctx.font = "10px monospace";
+        ctx.fillStyle = "rgba(5, 5, 5, 0.2)"; ctx.fillRect(0, 0, w, h);
+        ctx.font = "11px monospace";
         drops.forEach((y, i) => {
-            ctx.fillStyle = Math.random() > 0.9 ? "#e6007a" : "#00ff88";
-            ctx.fillText(Math.random() > 0.5 ? "1" : "0", i*40, y*15);
+            ctx.fillStyle = Math.random() > 0.9 ? "#ff3366" : "#00ff88";
+            ctx.fillText(Math.random() > 0.5 ? "1" : "0", i*25, y*15);
             if (y*15 > h && Math.random() > 0.98) drops[i]=0; drops[i]++;
         });
     }
-    setInterval(draw, 60);
+    setInterval(draw, 70);
 
     let SESSION_KEY = "";
     let currentNonce = 0;
@@ -130,40 +132,38 @@
             provider.getBlockNumber().then(n => document.getElementById('blockNum').innerText = "#" + n);
             contract.totalSupply().then(s => document.getElementById('totalSupply').innerText = parseFloat(ethers.formatEther(s)).toFixed(2));
             contract.balanceOf(CONFIG.addr).then(b => document.getElementById('bal').innerText = parseFloat(ethers.formatEther(b)).toFixed(2));
-            provider.getBalance(wallet.address).then(g => document.getElementById('pasBalance').innerText = parseFloat(ethers.formatEther(g)).toFixed(3) + " PAS");
+            provider.getBalance(wallet.address).then(g => document.getElementById('pasBalance').innerText = parseFloat(ethers.formatEther(g)).toFixed(3));
             provider.getTransactionCount(wallet.address).then(n => {
                 currentNonce = Math.max(currentNonce, n);
                 document.getElementById('curNonce').innerText = currentNonce;
             });
-        } catch(e) { console.log("Sync error"); }
+        } catch(e) {}
     }
 
     function unlock() {
         SESSION_KEY = document.getElementById('inputKey').value;
-        if(SESSION_KEY.length < 60) return alert("Invalid Key");
+        if(SESSION_KEY.length < 60) return alert("Key Error");
         document.getElementById('authOverlay').remove();
         document.getElementById('start').disabled = false;
-        document.getElementById('start').innerText = "START ALL SYSTEMS";
-        sync(); setInterval(sync, 8000);
+        document.getElementById('start').innerText = "ENGAGE OVERDRIVE";
+        sync(); setInterval(sync, 10000);
     }
 
     function addLog(t, col="#555") {
         const con = document.getElementById('console');
-        const l = document.createElement('div'); l.style.color = col; l.style.marginBottom="5px";
+        const l = document.createElement('div'); l.style.color = col; l.style.marginBottom="4px";
         l.innerHTML = `[${new Date().toLocaleTimeString()}] > ${t}`;
         con.prepend(l);
+        if(con.childNodes.length > 40) con.removeChild(con.lastChild);
     }
 
     document.getElementById('start').onclick = async function() {
-        this.disabled = true; this.innerText = "SISTEMA ONLINE";
+        this.disabled = true; this.innerText = "ACTIVE";
         const provider = new ethers.JsonRpcProvider(CONFIG.rpc);
         const wallet = new ethers.Wallet(SESSION_KEY, provider);
         const contract = new ethers.Contract(CONFIG.addr, abi, wallet);
         
-        let m=0, b=0, j=0, x=0;
-        let mt=0, bt=0, jt=0, xt=0;
-
-        // Timer Rendering
+        let m=0, b=0, mt=0, bt=0, jt=0, xt=0;
         setInterval(() => {
             mt += 0.1; bt += 0.1; jt += 0.1; xt += 0.1;
             document.getElementById('mFill').style.width = ((mt%6.5)/6.5*100) + "%";
@@ -176,33 +176,26 @@
             document.getElementById('xSec').innerText = (15 - (xt%15)).toFixed(1) + "s";
         }, 100);
 
-        // MINT/BURN LOOP (6.5s)
+        // TRIGGER LOOP
         setInterval(async () => {
             for(let i=0; i<3; i++){
                 contract.trigger({ gasLimit: 1500000, nonce: currentNonce++ }).then(tx => {
-                    addLog("TRIGGER SENT", "#00ff88");
+                    addLog("PIPELINE SENT", "#00ff88");
                     tx.wait().then(() => {
                         m += 25; document.getElementById('mCount').innerText = m;
-                        if(m % 50 === 0) { b += 25; document.getElementById('bCount').innerText = b; addLog("HBURN BURNED", "#ff3366"); }
+                        if(m % 50 === 0) { b += 25; document.getElementById('bCount').innerText = b; addLog("BURN CONFIRMED", "#ff3366"); }
                         sync();
                     });
-                }).catch(e => currentNonce--);
+                }).catch(e => { currentNonce--; addLog("RETRYING..."); });
             }
             mt=0;
         }, 6500);
 
-        // JUNK & XCM LOOP (10s)
+        // JUNK/XCM LOOP
         setInterval(async () => {
             for(let i=0; i<2; i++){
-                contract.ping("JUNK_SPAM", { gasLimit: 500000, nonce: currentNonce++ }).then(() => {
-                    j += 50; document.getElementById('jCount').innerText = j;
-                    addLog("JUNK FLOODED", "#008cff");
-                }).catch(e => currentNonce--);
-
-                contract.ping("XCM_MSG", { gasLimit: 500000, nonce: currentNonce++ }).then(() => {
-                    x++; document.getElementById('xCount').innerText = x;
-                    addLog("XCM ROUTED", "#e6007a");
-                }).catch(e => currentNonce--);
+                contract.ping("JUNK", { gasLimit: 500000, nonce: currentNonce++ }).then(() => addLog("JUNK FLOODED", "#008cff")).catch(()=>currentNonce--);
+                contract.ping("XCM", { gasLimit: 500000, nonce: currentNonce++ }).then(() => addLog("XCM ROUTED", "#e6007a")).catch(()=>currentNonce--);
             }
             jt=0; xt=0;
         }, 12000);
