--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HBURN_PRECISION_v27.6</title>
+    <title>HBURN_WHITE_RABBIT_v27.7</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/6.7.0/ethers.umd.min.js"></script>
     <style>
-        :root { --p: #00ff88; --s: #ff3366; --bg: #030406; --glass: rgba(5, 5, 5, 0.95); --net: #008cff; --xcm: #e6007a; }
+        :root { --p: #00ff88; --s: #ff3366; --bg: #030406; --glass: rgba(5, 5, 5, 0.95); --net: #008cff; --xcm: #e6007a; --w: #ffffff; }
         * { box-sizing: border-box; }
         body, html { margin: 0; padding: 0; height: 100vh; background: var(--bg); color: #fff; font-family: 'Consolas', 'Courier New', monospace; overflow: hidden; display: flex; justify-content: center; align-items: center; }
 
-        #canvas { position: fixed; top: 0; left: 0; z-index: 1; opacity: 0.3; pointer-events: none; }
+        #canvas { position: fixed; top: 0; left: 0; z-index: 1; opacity: 0.35; pointer-events: none; }
         #console::-webkit-scrollbar { width: 3px; }
         #console::-webkit-scrollbar-thumb { background: var(--p); border-radius: 5px; }
 
@@ -31,8 +31,9 @@
         .m-bar { width: 100%; height: 4px; background: #111; border-radius: 2px; overflow: hidden; }
         .m-fill { height: 100%; width: 0%; transition: width 0.1s linear; }
 
+        .main-content { display: flex; flex-direction: column; overflow: hidden; }
         .header { padding: 15px 25px; background: rgba(0,0,0,0.6); border-bottom: 1px solid #1a1a1a; display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; font-size: 10px; color: #888; }
-        #console { flex-grow: 1; padding: 25px; overflow-y: auto; font-size: 11px; color: #666; line-height: 1.6; }
+        #console { flex-grow: 1; padding: 25px; overflow-y: auto; font-size: 11px; color: #bbb; line-height: 1.6; background: rgba(0,0,0,0.2); }
 
         .grid-stats { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-top: 5px; }
         button { background: var(--p); color: #000; border: none; padding: 16px; border-radius: 10px; font-weight: bold; cursor: pointer; text-transform: uppercase; width: 100%; margin-top: auto; }
@@ -44,9 +45,9 @@
 
 <div id="authOverlay">
     <div class="auth-box">
-        <div class="stat-label">HBURN TERMINAL v27.6</div>
+        <div class="stat-label">HBURN TERMINAL v27.7</div>
         <input type="password" id="inputKey" class="auth-input" placeholder="0xPRIVATE_KEY">
-        <button onclick="unlock()">INJECT SESSION</button>
+        <button onclick="unlock()">WAKE UP GAVIN</button>
     </div>
 </div>
 
@@ -63,19 +64,19 @@
 
         <div class="m-box">
             <div class="m-info"><span style="color:var(--p)">● Mint (25x)</span><span id="mSec">0s</span></div>
-            <div class="m-bar"><div id="mFill" class="m-fill" style="background:var(--p)"></div></div>
+            <div class="m-bar"><div id="mFill" class="fill m-fill" style="background:var(--p)"></div></div>
         </div>
         <div class="m-box">
             <div class="m-info"><span style="color:var(--s)">● Burn (25x)</span><span id="bSec">0s</span></div>
-            <div class="m-bar"><div id="bFill" class="m-fill" style="background:var(--s)"></div></div>
+            <div class="m-bar"><div id="bFill" class="fill m-fill" style="background:var(--s)"></div></div>
         </div>
         <div class="m-box">
             <div class="m-info"><span style="color:var(--net)">● Junk (50x)</span><span id="jSec">0s</span></div>
-            <div class="m-bar"><div id="jFill" class="m-fill" style="background:var(--net)"></div></div>
+            <div class="m-bar"><div id="jFill" class="fill m-fill" style="background:var(--net)"></div></div>
         </div>
         <div class="m-box">
             <div class="m-info"><span style="color:var(--xcm)">● XCM (Paseo)</span><span id="xSec">0s</span></div>
-            <div class="m-bar"><div id="xFill" class="m-fill" style="background:var(--xcm)"></div></div>
+            <div class="m-bar"><div id="xFill" class="fill m-fill" style="background:var(--xcm)"></div></div>
         </div>
 
         <div class="grid-stats">
@@ -99,23 +100,33 @@
 </div>
 
 <script>
-    // MATRIX BG ORIGINAL
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
     let w, h, drops;
+    const phrases = ["Wake up Gav", "Follow the white rabbit"];
+
     function initC() { w=canvas.width=window.innerWidth; h=canvas.height=window.innerHeight; drops=Array(Math.floor(w/25)).fill(1); }
     initC(); window.onresize = initC;
+
     function draw() {
         ctx.fillStyle = "rgba(3, 4, 6, 0.2)"; ctx.fillRect(0, 0, w, h);
-        ctx.font = "11px monospace";
+        ctx.font = "12px monospace";
         drops.forEach((y, i) => {
-            const char = Math.random() > 0.5 ? "1" : "0";
-            ctx.fillStyle = Math.random() > 0.9 ? "#ff3366" : "#00ff88"; // Verde e Rosso Error
-            ctx.fillText(char, i*25, y*15);
+            const isPhrase = Math.random() > 0.98;
+            let text = Math.random() > 0.5 ? "1" : "0";
+            ctx.fillStyle = "#00ff88"; // Default verde
+
+            if (isPhrase) {
+                const phraseIdx = Math.floor(Math.random() * phrases.length);
+                text = phrases[phraseIdx];
+                ctx.fillStyle = phraseIdx === 0 ? "#00ff88" : "#ffffff"; // Gav verde, Rabbit bianco
+            }
+
+            ctx.fillText(text, i*30, y*15);
             if (y*15 > h && Math.random() > 0.98) drops[i]=0; drops[i]++;
         });
     }
-    setInterval(draw, 70);
+    setInterval(draw, 80);
 
     let SESSION_KEY = "";
     let currentNonce = 0;
@@ -137,7 +148,7 @@
                 currentNonce = Math.max(currentNonce, n);
                 document.getElementById('curNonce').innerText = currentNonce;
             });
-        } catch(e) {}
+        } catch(e) { addLog("SYSTEM_SYNC_ERROR: Check RPC connection", "#ffaa00"); }
     }
 
     function unlock() {
@@ -146,13 +157,14 @@
         document.getElementById('authOverlay').remove();
         document.getElementById('start').disabled = false;
         document.getElementById('start').innerText = "ENGAGE OVERDRIVE";
+        addLog("SYSTEM_INITIALIZED: Welcome to White Rabbit Protocol", "#00ff88");
         sync(); setInterval(sync, 10000);
     }
 
-    function addLog(t, col="#555") {
+    function addLog(t, col="#bbb") {
         const con = document.getElementById('console');
         const l = document.createElement('div'); l.style.color = col; l.style.marginBottom="4px";
-        l.style.fontWeight = (col !== "#555") ? "bold" : "normal";
+        l.style.fontWeight = (col !== "#bbb") ? "bold" : "normal";
         l.innerHTML = `[${new Date().toLocaleTimeString()}] > ${t}`;
         con.prepend(l);
         if(con.childNodes.length > 50) con.removeChild(con.lastChild);
@@ -164,8 +176,7 @@
         const wallet = new ethers.Wallet(SESSION_KEY, provider);
         const contract = new ethers.Contract(CONFIG.addr, abi, wallet);
         
-        let m=0, b=0, j=0, x=0;
-        let mt=0, bt=0, jt=0, xt=0;
+        let m=0, b=0, j=0, x=0, mt=0, bt=0, jt=0, xt=0;
 
         setInterval(() => {
             mt += 0.1; bt += 0.1; jt += 0.1; xt += 0.1;
@@ -179,36 +190,30 @@
             document.getElementById('xSec').innerText = (15 - (xt%15)).toFixed(1) + "s";
         }, 100);
 
-        // MINT/BURN LOOP (6.5s)
         setInterval(async () => {
             for(let i=0; i<3; i++){
-                contract.trigger({ gasLimit: 1500000, nonce: currentNonce++ }).then(tx => {
-                    addLog("HBURN minted", "#00ff88"); // VERDE
+                const nonce = currentNonce++;
+                contract.trigger({ gasLimit: 1500000, nonce: nonce }).then(tx => {
+                    addLog("HBURN minted", "#00ff88");
                     tx.wait().then(() => {
                         m += 25; document.getElementById('mCount').innerText = m;
-                        if(m % 50 === 0) { 
-                            b += 25; 
-                            document.getElementById('bCount').innerText = b; 
-                            addLog("HBURN Burned", "#ff3366"); // ROSSO
-                        }
-                        sync();
-                    });
-                }).catch(e => { currentNonce--; });
+                        if(m % 50 === 0) { b += 25; document.getElementById('bCount').innerText = b; addLog("HBURN Burned", "#ff3366"); }
+                    }).catch(e => addLog("TX_REJECTED: Check Gas/Nonce", "#s"));
+                }).catch(e => { currentNonce--; addLog("TX_FAILED: RPC Throttling", "#s"); });
             }
             mt=0;
         }, 6500);
 
-        // JUNK/XCM LOOP (10s/15s)
         setInterval(async () => {
             for(let i=0; i<2; i++){
                 contract.ping("JUNK", { gasLimit: 500000, nonce: currentNonce++ }).then(() => {
                     j += 50; document.getElementById('jCount').innerText = j;
-                    addLog("JUNK flooded", "#008cff"); // BLU
+                    addLog("JUNK flooded", "#008cff");
                 }).catch(()=>currentNonce--);
 
                 contract.ping("XCM", { gasLimit: 500000, nonce: currentNonce++ }).then(() => {
                     x++; document.getElementById('xCount').innerText = x;
-                    addLog("XCM routed", "#e6007a"); // ROSA POLKADOT
+                    addLog("XCM routed", "#e6007a");
                 }).catch(()=>currentNonce--);
             }
             jt=0; xt=0;
