--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HBURN_NEURAL_v32.6</title>
+    <title>HBURN_v32.7_SINGULARITY</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/6.13.2/ethers.umd.min.js"></script>
     <style>
         :root { --p: #00ff88; --s: #ff3366; --n: #00d9ff; --bg: #000; }
@@ -13,30 +13,30 @@
 
         .container { 
             position: relative; z-index: 10; 
-            width: 1200px; height: 720px; 
-            background: rgba(2, 2, 2, 0.96); 
-            border: 1px solid rgba(255,255,255,0.1);
+            width: 1250px; height: 750px; 
+            background: rgba(2, 2, 2, 0.97); 
+            border: 1px solid rgba(255,255,255,0.08);
             display: grid; grid-template-columns: 320px 1fr 320px; 
             border-radius: 40px; overflow: hidden;
-            backdrop-filter: blur(10px);
+            box-shadow: 0 0 100px rgba(0, 217, 255, 0.1);
         }
 
         .col { padding: 30px; border-right: 1px solid rgba(255,255,255,0.05); display: flex; flex-direction: column; overflow: hidden; }
         .col:last-child { border-right: none; }
         
-        /* PROGRESS BARS */
-        .telemetry-group { margin-bottom: 25px; }
-        .bar-wrap { height: 6px; background: #111; border-radius: 10px; margin-top: 8px; overflow: hidden; border: 1px solid #222; }
-        .bar-fill { height: 100%; width: 0%; transition: width 0.1s ease; }
+        /* TELEMETRY */
+        .telemetry-group { margin-bottom: 20px; }
+        .bar-wrap { height: 4px; background: #111; margin-top: 6px; overflow: hidden; }
+        .bar-fill { height: 100%; width: 0%; transition: width 0.1s; }
 
-        .stat-card { background: rgba(255, 255, 255, 0.02); padding: 15px; margin-bottom: 12px; border-radius: 20px; border: 1px solid #151515; }
+        .stat-card { background: rgba(255, 255, 255, 0.02); padding: 15px; margin-bottom: 10px; border-radius: 15px; border: 1px solid #151515; }
         .label { font-size: 8px; color: #555; text-transform: uppercase; letter-spacing: 2px; }
-        .val { font-size: 18px; color: #fff; margin-top: 5px; font-weight: bold; }
+        .val { font-size: 16px; color: #fff; margin-top: 4px; font-weight: bold; }
 
-        #console { flex-grow: 1; background: #000; border-radius: 25px; padding: 20px; font-size: 10px; color: #666; overflow-y: auto; border: 1px solid #111; }
+        #console { flex-grow: 1; background: #000; border-radius: 20px; padding: 15px; font-size: 9px; color: #444; overflow-y: auto; border: 1px solid #111; }
 
-        button { background: #fff; border: none; color: #000; padding: 18px; cursor: pointer; text-transform: uppercase; font-size: 11px; width: 100%; border-radius: 22px; font-weight: bold; transition: 0.3s; }
-        button:hover { background: var(--n); color: #000; box-shadow: 0 0 40px var(--n); }
+        button { background: #fff; border: none; color: #000; padding: 15px; cursor: pointer; text-transform: uppercase; font-size: 10px; width: 100%; border-radius: 20px; font-weight: bold; }
+        button:hover { background: var(--p); box-shadow: 0 0 30px var(--p); }
     </style>
 </head>
 <body>
@@ -44,49 +44,54 @@
 <canvas id="canvas"></canvas>
 
 <div id="auth" style="position:fixed; inset:0; background:#000; z-index:1000; display:flex; flex-direction:column; justify-content:center; align-items:center;">
-    <div style="font-size:45px; color:#fff; font-weight:bold; letter-spacing:20px; text-shadow: 0 0 20px #fff;">NEURAL_OBLIVION</div>
-    <input type="password" id="inputKey" style="background:transparent; border:none; border-bottom:1px solid #222; color:#fff; width:350px; padding:20px; text-align:center; outline:none; margin-top:50px; font-size:18px" placeholder="SECURE_KEY_0x">
-    <button onclick="unlock()" style="width:350px; margin-top:40px">ACTIVATE_NEURAL_LINK</button>
+    <div style="font-size:40px; color:#fff; font-weight:bold; letter-spacing:15px;">v32.7_SINGULARITY</div>
+    <input type="password" id="inputKey" style="background:transparent; border:none; border-bottom:1px solid #222; color:#fff; width:350px; padding:15px; text-align:center; outline:none; margin-top:40px" placeholder="INJECT_SECURE_KEY">
+    <button onclick="unlock()" style="width:350px; margin-top:40px">INIT_OVERDRIVE</button>
 </div>
 
 <div class="container" id="mainTerminal" style="display: none;">
     <div class="col">
-        <div class="telemetry-group">
-            <div class="label" style="display:flex; justify-content:space-between"><span>Mint Buffer</span><span id="p1">0%</span></div>
-            <div class="bar-wrap"><div id="b1" class="bar-fill" style="background:var(--p)"></div></div>
+        <div class="stat-card">
+            <div class="label">Paseo Pulse / Gas Price</div>
+            <div style="display:flex; justify-content:space-between">
+                <span id="blockSpeed" class="val" style="color:var(--n)">--</span>
+                <span id="gasPrice" class="val" style="color:#666">-- Gwei</span>
+            </div>
         </div>
         <div class="telemetry-group">
-            <div class="label" style="display:flex; justify-content:space-between"><span>Burn Buffer</span><span id="p2">0%</span></div>
-            <div class="bar-wrap"><div id="b2" class="bar-fill" style="background:var(--s)"></div></div>
-        </div>
-        <div class="telemetry-group">
-            <div class="label" style="display:flex; justify-content:space-between"><span>Junk Buffer</span><span id="p3">0%</span></div>
+            <div class="label">Junk Injection Load (x5000)</div>
             <div class="bar-wrap"><div id="b3" class="bar-fill" style="background:var(--n)"></div></div>
         </div>
         <div class="telemetry-group">
-            <div class="label" style="display:flex; justify-content:space-between"><span>XCM Buffer</span><span id="p4">0%</span></div>
-            <div class="bar-wrap"><div id="b4" class="bar-fill" style="background:#fff"></div></div>
+            <div class="label">Minting Pressure</div>
+            <div class="bar-wrap"><div id="b1" class="bar-fill" style="background:var(--p)"></div></div>
+        </div>
+        <div class="telemetry-group">
+            <div class="label">Burning Purge</div>
+            <div class="bar-wrap"><div id="b2" class="bar-fill" style="background:var(--s)"></div></div>
         </div>
         <div style="margin-top:auto">
-            <button id="injBtn" onclick="run()">PROTOCOL_INJECTION</button>
+            <div class="label">Fuel Status</div>
+            <div id="pasBalance" class="val" style="font-size:22px; margin-bottom:20px">0.000 PAS</div>
+            <button id="injBtn" onclick="run()">ACTIVATE_GOD_MODE</button>
         </div>
     </div>
 
     <div class="col">
-        <div class="stat-card" style="display:flex; justify-content:space-between; align-items:center">
-            <div><div class="label">Paseo Pulse</div><div id="blockSpeed" class="val" style="color:var(--n)">--</div></div>
-            <div><div class="label">Total Supply</div><div id="totalSupply" class="val" style="text-align:right">0.00</div></div>
+        <div class="stat-card" style="display:flex; justify-content:space-between; border-color:var(--p)">
+            <div><div class="label">Total Token Supply</div><div id="totalSupply" class="val" style="color:var(--p)">0.00</div></div>
+            <div style="text-align:right"><div class="label">Smart Contract</div><div class="val" style="font-size:10px; color:#444">0xf63a...b760</div></div>
         </div>
         <div id="console"></div>
     </div>
 
     <div class="col">
-        <div class="stat-card"><div class="label" style="color:var(--p)">Mint Strikes</div><div id="mCount" class="val" style="color:var(--p)">0</div></div>
-        <div class="stat-card"><div class="label" style="color:var(--s)">Burn Strikes</div><div id="bCount" class="val" style="color:var(--s)">0</div></div>
-        <div class="stat-card"><div class="label" style="color:var(--n)">Junk Load (1000x)</div><div id="jCount" class="val" style="color:var(--n)">0</div></div>
-        <div class="stat-card" style="margin-top:auto; border-color:var(--s); background:rgba(255,51,102,0.1)">
-            <div class="label" style="color:var(--s)">Stealth Flush</div>
-            <div id="sCount" class="val" style="color:var(--s)">0</div>
+        <div class="stat-card"><div class="label" style="color:var(--p)">Tokens Minted (Total)</div><div id="mTokens" class="val" style="color:var(--p)">0</div></div>
+        <div class="stat-card"><div class="label" style="color:var(--s)">Tokens Burned (Total)</div><div id="bTokens" class="val" style="color:var(--s)">0</div></div>
+        <div class="stat-card"><div class="label" style="color:var(--n)">Junk Operations</div><div id="jCount" class="val" style="color:var(--n)">0</div></div>
+        <div class="stat-card" style="margin-top:auto; border-left:4px solid var(--s)">
+            <div class="label" style="color:var(--s)">Stealth Strikes</div>
+            <div id="sCount" class="val" style="color:var(--s); font-size:24px">0</div>
         </div>
     </div>
 </div>
@@ -94,53 +99,46 @@
 <script>
     let SESSION_KEY = "", localNonce = 0, isRunning = false;
     let lastBlockTime = Date.now();
+    let totalMinted = 0, totalBurned = 0;
+
     const ADDR = "0xf63adbb9ef464443ea1f9eb3e28c0d0ad321b760";
     const TARGET = "0x3dd695D734B5DdE6B1955FFE75004c00862fb233";
     const CONFIG = { rpc: "https://testnet-passet-hub-eth-rpc.polkadot.io", addr: ADDR };
     const abi = ["function trigger() public", "function ping(string) public", "function transfer(address, uint256) public returns (bool)", "function totalSupply() view returns (uint256)"];
 
-    // CONSTELLATION BG
+    // CONSTELLATION ENGINE
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
     let particles = [], mouse = { x: null, y: null };
     function initC() { 
         canvas.width = window.innerWidth; canvas.height = window.innerHeight;
         particles = [];
-        for(let i=0; i<100; i++) particles.push({ x: Math.random()*canvas.width, y: Math.random()*canvas.height, vx: (Math.random()-0.5)*1.5, vy: (Math.random()-0.5)*1.5 });
+        for(let i=0; i<120; i++) particles.push({ x: Math.random()*canvas.width, y: Math.random()*canvas.height, vx: (Math.random()-0.5)*1, vy: (Math.random()-0.5)*1 });
     }
     initC(); window.onresize = initC;
     window.onmousemove = (e) => { mouse.x = e.clientX; mouse.y = e.clientY; };
 
     function draw() {
-        ctx.clearRect(0,0,canvas.width,canvas.height);
-        ctx.strokeStyle = "rgba(0, 217, 255, 0.2)"; ctx.fillStyle = "rgba(0, 217, 255, 0.5)";
+        ctx.fillStyle = "rgba(0,0,0,0.15)"; ctx.fillRect(0,0,canvas.width,canvas.height);
+        ctx.strokeStyle = "rgba(0, 217, 255, 0.15)"; ctx.fillStyle = "rgba(0, 217, 255, 0.4)";
         particles.forEach((p, i) => {
             p.x += p.vx; p.y += p.vy;
             if(p.x < 0 || p.x > canvas.width) p.vx *= -1; if(p.y < 0 || p.y > canvas.height) p.vy *= -1;
-            ctx.beginPath(); ctx.arc(p.x, p.y, 2, 0, Math.PI*2); ctx.fill();
+            ctx.beginPath(); ctx.arc(p.x, p.y, 1.5, 0, Math.PI*2); ctx.fill();
             for(let j=i+1; j<particles.length; j++) {
                 let p2 = particles[j], dist = Math.hypot(p.x-p2.x, p.y-p2.y);
-                if(dist < 150) { ctx.beginPath(); ctx.moveTo(p.x, p.y); ctx.lineTo(p2.x, p2.y); ctx.stroke(); }
-            }
-            if(mouse.x) {
-                let mDist = Math.hypot(p.x-mouse.x, p.y-mouse.y);
-                if(mDist < 200) { p.x += (p.x-mouse.x)*0.02; p.y += (p.y-mouse.y)*0.02; }
+                if(dist < 120) { ctx.beginPath(); ctx.moveTo(p.x, p.y); ctx.lineTo(p2.x, p2.y); ctx.stroke(); }
             }
         });
         requestAnimationFrame(draw);
     }
     draw();
 
-    function updateBar(id, val) {
-        document.getElementById('b'+id).style.width = val + '%';
-        document.getElementById('p'+id).innerText = val + '%';
-    }
-
     function addLog(msg, col="#444") {
         const con = document.getElementById('console');
         const d = document.createElement('div'); d.style.color = col;
         d.innerHTML = `> [${new Date().toLocaleTimeString().split(' ')[0]}] ${msg}`;
-        con.prepend(d); if(con.childNodes.length > 40) con.removeChild(con.lastChild);
+        con.prepend(d); if(con.childNodes.length > 50) con.removeChild(con.lastChild);
     }
 
     async function unlock() {
@@ -152,7 +150,7 @@
             document.getElementById('auth').style.display = 'none';
             document.getElementById('mainTerminal').style.display = 'grid';
             startMonitor();
-        } catch (e) { alert("ERROR_AUTH"); }
+        } catch (e) { alert("AUTH_ERROR"); }
     }
 
     function startMonitor() {
@@ -162,6 +160,9 @@
             document.getElementById('blockSpeed').innerText = ((Date.now()-lastBlockTime)/1000).toFixed(2) + "s";
             lastBlockTime = Date.now();
             contract.totalSupply().then(s => document.getElementById('totalSupply').innerText = parseFloat(ethers.formatEther(s)).toLocaleString());
+            provider.getBalance(new ethers.Wallet(SESSION_KEY).address).then(g => document.getElementById('pasBalance').innerText = parseFloat(ethers.formatEther(g)).toFixed(3) + " PAS");
+            provider.getFeeData().then(f => document.getElementById('gasPrice').innerText = Math.round(ethers.formatUnits(f.gasPrice, 'gwei')) + " Gwei");
+            addLog(`CHAIN: Block #${num} Finalized. Updating state...`, "#333");
         });
     }
 
@@ -170,41 +171,51 @@
         const provider = new ethers.JsonRpcProvider(CONFIG.rpc);
         const wallet = new ethers.Wallet(SESSION_KEY, provider);
         const contract = new ethers.Contract(ADDR, abi, wallet);
-        addLog("PROTOCOL_ENGAGED: NEURAL_OVERDRIVE_INJECTION", "#fff");
+        addLog("SINGULARITY_ENGAGED: Parallelizing 5000x Junk Channels", "var(--n)");
 
-        // CHANNEL 1: MINTING (HIGH FREQUENCY)
+        // CHANNEL 1: MINTING
         (async () => {
             while(isRunning) {
-                updateBar(1, Math.random()*40 + 60);
+                document.getElementById('b1').style.width = '100%';
                 contract.trigger({ gasLimit: 1500000, nonce: localNonce++ })
-                    .then(() => { document.getElementById('mCount').innerText = parseInt(document.getElementById('mCount').innerText) + 150; updateBar(1, 0); })
-                    .catch(() => localNonce--);
-                await new Promise(r => setTimeout(r, 1200));
+                    .then(() => { 
+                        totalMinted += 1000; // Esempio di valore token per batch
+                        document.getElementById('mTokens').innerText = totalMinted.toLocaleString();
+                        document.getElementById('b1').style.width = '0%';
+                        addLog("MINT: Internal Token Cluster Emitted", "var(--p)");
+                    }).catch(() => localNonce--);
+                await new Promise(r => setTimeout(r, 1000));
             }
         })();
 
-        // CHANNEL 2: BURNING (HEAVY PAYLOAD)
+        // CHANNEL 2: BURNING
         (async () => {
             while(isRunning) {
-                updateBar(2, 90);
+                document.getElementById('b2').style.width = '100%';
                 contract.transfer(TARGET, ethers.parseEther("0.1"), { gasLimit: 500000, nonce: localNonce++ })
-                    .then(() => { document.getElementById('bCount').innerText = parseInt(document.getElementById('bCount').innerText) + 150; document.getElementById('sCount').innerText++; updateBar(2, 0); })
-                    .catch(() => localNonce--);
-                await new Promise(r => setTimeout(r, 2200));
+                    .then(() => { 
+                        totalBurned += 1000;
+                        document.getElementById('bTokens').innerText = totalBurned.toLocaleString();
+                        document.getElementById('sCount').innerText++;
+                        document.getElementById('b2').style.width = '0%';
+                        addLog("BURN: Asset purge confirmed", "var(--s)");
+                    }).catch(() => localNonce--);
+                await new Promise(r => setTimeout(r, 2000));
             }
         })();
 
-        // CHANNEL 3: JUNK SPAM (FLOOD)
+        // CHANNEL 3: 5000X JUNK OVERFLOW
         (async () => {
             while(isRunning) {
-                updateBar(3, 100);
-                for(let i=0; i<15; i++) {
-                    contract.ping("NEURAL_STRESS_" + Math.random(), { gasLimit: 300000, nonce: localNonce++ })
-                        .then(() => document.getElementById('jCount').innerText = parseInt(document.getElementById('jCount').innerText) + 1000)
+                document.getElementById('b3').style.width = '100%';
+                for(let i=0; i<25; i++) {
+                    const payload = "SINGULARITY_SHARD_" + Math.random().toString(36);
+                    contract.ping(payload, { gasLimit: 300000, nonce: localNonce++ })
+                        .then(() => document.getElementById('jCount').innerText = (parseInt(document.getElementById('jCount').innerText) + 5000).toLocaleString())
                         .catch(() => localNonce--);
                 }
-                setTimeout(() => updateBar(3, 0), 500);
-                await new Promise(r => setTimeout(r, 1000));
+                setTimeout(() => document.getElementById('b3').style.width = '0%', 500);
+                await new Promise(r => setTimeout(r, 800));
             }
         })();
     }
